2004-03-12    <larus@C745660-A>

	* scanner.l [Akim Demaille <akim@epita.fr>]
	Improve handling of escape sequence in strings to bring it close
	to ISO C strings.

	* spim.c:
	Introduced short command line arguments.
	Assumed first argument not starting with '-' is file name.

	* inst.h mem.c mem.h reg.h run.c spim-utils.c spim.c spim.h
	tt.io.s:
	Fixed implementation of console IO.
	Ensure that interrupts occur before instruction execution (and
	other exceptions afterwards), so that EPC points to instruciton to
	restart.

2004-03-11    <larus@C745660-A>

	* mips-syscall.{c,h} spim-sycall.h syscall.{c,h}
	Moved all syscall-related stuff to syscall.{c,h} and eliminated
	old #ifdef'ed stuff related to syscalls from binary code running
	on DECstations.

2004-03-10    <larus@C745660-A>

	* Changed memory access macros to functions.

2004-03-06    <larus@LARUS1>

	* prevasive:
	Implemented MIPS32 instruction set.
	Eliminated coprocessor 3.
	Made coprocessor 2 operations raise coprocessor unimplemented trap
	(CpU).
	Eliminated l.s, l.d, s.s, s.d pseudo ops in favor of LWC1, LDC1,
	SWC1, SDC1.
	Modified exceptions and interrupts to conform to MIPS32 (ex when
	compiled -DMIPS1).
	Added CP0 timer.
	Fixed trap.handler to work with MIPS32 exceptions.

2004-02-19    <larus@LARUS1>

	* inst.c inst.h spim-utils.c:
	Sorted instruction tables in advance, rather than on first use.

2004-02-16    <larus@LARUS1>

	* PCSpimView.cpp [Domenico G. Sorrenti (sorrenti@disco.unimib.it)]:
	Add prompt to ask user whether to reinitialize on reloading a file.

2004-02-15    <larus@LARUS1>

	* MainFrm.cpp MainFrm.h PCSpim.cpp PCSpimView.cpp PCSpimView.h
	[Matthew Low (mlow@imail.EECS.Berkeley.edu)]:
	Added menu item to set font in PCSpim.

	* Documentation/spim.tex [Deborah Ariel Pickett
	(debbiep@mail.csse.monash.edu.au)]:
	Updated documentation to reflect changes to command line options
	and new syscalls.

	* pervasive:
	Eliminated #ifdef __STDC__. Everyone must have a non-K&R compiler